--- a/.github/workflows/release-dind-build.yml
+++ b/.github/workflows/release-dind-build.yml
@@ -31,4 +31,6 @@ jobs:
           DOMESTIC_NAMESPACE: ${{ secrets.DOMESTIC_NAMESPACE }}
           DOMESTIC_DOCKER_PASSWORD: ${{ secrets.DOMESTIC_DOCKER_PASSWORD }}
           DOMESTIC_DOCKER_USERNAME: ${{ secrets.DOMESTIC_DOCKER_USERNAME }}
-        run: VERSION=v5.5.0-dind ./release.sh allinone
+          VERSION: ${{ secrets.VERSION }}
+          OPERATOR_BRANCH: ${{ secrets.OPERATOR_BRANCH }}
+        run: ./release.sh dind
