fix: add dind env ENABLE_CLUSTER
Signed-off-by: Qi Zhang <smallqi1@163.com>

--- a/Dockerfile.dind
+++ b/Dockerfile.dind
@@ -106,6 +106,7 @@ ENV VERSION=${VERSION}
 ENV RAINBOND_VERSION=${VERSION}
 ENV OPERATOR_VERSION=${VERSION}
 ENV DOMESTIC_NAMESPACE=${DOMESTIC_NAMESPACE}
+ENV ENABLE_CLUSTER=true
 
 VOLUME /app/data
 VOLUME /app/logs
