--- a/dind.conf
+++ b/dind.conf
@@ -1,9 +1,8 @@
 [program:docker]
 directory=/app/
 command=/usr/local/bin/dockerd
-priority=999
 user=root
-autostart=true
+autostart=false
 autorestart=true
 stdout_logfile=/app/logs/dind.log
 stdout_logfile_maxbytes=10mb
@@ -13,11 +12,9 @@ redirect_stderr=true
 
 [program:k3s]
 directory=/app/
-depends_on=docker
-command=/app/ui/k3s.sh
-priority=998
+command=/usr/local/bin/k3s server --docker --disable traefik --node-name node --data-dir /app/data/k3s --tls-san %(ENV_EIP)s
 user=root
-autostart=true
+autostart=false
 autorestart=true
 stdout_logfile=/app/logs/k3s.log
 stdout_logfile_maxbytes=10mb
@@ -28,9 +25,8 @@ stopsignal=TERM
 
 [program:init_rainbond]
 directory=/app/
-depends_on=k3s
-command=/bin/bash /app/ui/init_rainbond.sh
-priority=997
+command=/bin/bash /app/ui/entrypoint-dind.sh
+autostart=true
 user=root
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
@@ -42,3 +38,25 @@ redirect_stderr=true
 command=/usr/bin/log
 user=root
 autostart=true
+
+
+[program:console]
+priority=20
+directory=/app/ui/
+command=/app/ui/entrypoint.sh
+user=root
+autostart=false
+autorestart=true
+stdout_logfile=/app/logs/console.log
+stderr_logfile=/app/logs/console_error.log
+
+
+[program:cloudadaptor]
+priority=20
+directory=/app/
+command=/app/cloudadaptor daemon
+user=root
+autostart=true
+autorestart=true
+stdout_logfile=/app/logs/cloudadaptor.log
+stderr_logfile=/app/logs/cloudadaptor_error.log
