feat: EIP removes the default value and prepares the k3s image

--- a/dind.conf
+++ b/dind.conf
@@ -12,7 +12,7 @@ redirect_stderr=true
 
 [program:k3s]
 directory=/app/
-command=/usr/local/bin/k3s server --disable traefik --node-name node --data-dir /app/data/k3s --tls-san %(ENV_EIP)s
+command=/usr/local/bin/k3s server --disable traefik --node-name node --data-dir /app/data/k3s
 user=root
 autostart=false
 autorestart=true
