--- a/dind.conf
+++ b/dind.conf
@@ -1,10 +1,10 @@
-[program:docker]
+[program:containerd]
 directory=/app/
-command=/usr/local/bin/dockerd
+command=/usr/local/bin/containerd --root /app/data/containerd
 user=root
 autostart=false
 autorestart=true
-stdout_logfile=/app/logs/dind.log
+stdout_logfile=/app/logs/containerd.log
 stdout_logfile_maxbytes=10mb
 stdout_logfile_backups=3
 redirect_stderr=true
@@ -12,7 +12,7 @@ redirect_stderr=true
 
 [program:k3s]
 directory=/app/
-command=/usr/local/bin/k3s server --disable traefik --node-name node --data-dir /app/data/k3s
+command=/usr/local/bin/k3s server --disable traefik --node-name node --data-dir /app/data/k3s --container-runtime-endpoint /run/containerd/containerd.sock
 user=root
 autostart=false
 autorestart=true
