--- a/.github/workflows/commit-ci-build.yml
+++ b/.github/workflows/commit-ci-build.yml
@@ -6,7 +6,8 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    # https://github.com/actions/setup-python/issues/544
+    runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python 3.6
