--- a/.github/workflows/pr-ci-build.yml
+++ b/.github/workflows/pr-ci-build.yml
@@ -32,4 +32,4 @@ jobs:
       - name: Build the Docker image
         env:
           TRAVIS_PULL_REQUEST: true
-        run: VERSION=${{ github.base_ref }}-dev ./release.sh allinone
+        run: VERSION=${{ github.base_ref }}-dev ./release.sh
