--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -1,10 +1,13 @@
-FROM python:3.6-stretch
+FROM python:3.6-slim-stretch
 
-LABEL email="zengqg@goodrain.com"
 LABEL runtime="rainbond"
 RUN ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime \
 	&& echo 'Asia/Shanghai' >/etc/timezone && \
+	echo "deb http://archive.debian.org/debian/ stretch main" > /etc/apt/sources.list && \
+	echo "deb http://archive.debian.org/debian-security stretch/updates main" >> /etc/apt/sources.list && \
 	apt-get update && apt-get install -y \
+	wget curl git supervisor iptables \
+	python3-dev default-libmysqlclient-dev build-essential \
 	net-tools \
 	mysql-client \
 	libmemcached-dev \
