fix: supervisor start warning
Signed-off-by: Qi Zhang <smallqi1@163.com>

--- a/Dockerfile.allinone
+++ b/Dockerfile.allinone
@@ -72,4 +72,4 @@ VOLUME /app/data
 VOLUME /app/logs
 VOLUME /root/.ssh
 
-CMD [ "/usr/bin/supervisord" ]
+CMD [ "/usr/bin/supervisord", "-c", "/etc/supervisor/supervisord.conf" ]
