--- a/supervisord.conf
+++ b/supervisord.conf
@@ -8,6 +8,7 @@ logfile=/app/logs/supervisord.log ;
 pidfile=/var/run/supervisord.pid ; (supervisord pidfile;default supervisord.pid)
 childlogdir=/var/log/supervisor            ; ('AUTO' child log dir, default $TEMP)
 loglevel=error
+user=root
 ; the below section must remain in the config file for RPC
 ; (supervisorctl/web interface) to work, additional interfaces may be
 ; added by defining them in separate rpcinterface: sections
